# obs-plugin-styled-camera

./: .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PACKAGING.md  PROFILING.md  README.md  SECURITY.md  SPEC.md
.github/workflows/: release-macos.yml
crates/obs-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/obs-sys/include/: obsconfig.h
crates/obs-sys/include/simde/x86/: sse2.h
crates/obs-sys/src/: lib.rs
crates/styledcamera/: Cargo.toml  build.rs
crates/styledcamera-core/: Cargo.toml
crates/styledcamera-core/src/: color.rs  lib.rs  segmentation.rs  timing.rs
crates/styledcamera/src/: constants.rs  filter.rs  frame_history.rs  graphics.rs  lib.rs  obs_exports.rs  perf.rs  segmentation.rs  settings.rs  util.rs
data/effects/: blur_downsample.effect  blur_pass.effect  shape_style.effect  styled_composite.effect
model/: README.md
scripts/: fetch-model.sh  install-macos.sh  install-windows.ps1  package-macos-arm64.sh  uninstall-macos.sh  uninstall-windows.ps1
