[package]
name = "obs-sys"
version.workspace = true
edition.workspace = true
build = "build.rs"
links = "obs"
publish = false
license.workspace = true
description = "Unsafe OBS Studio libobs bindings (bindgen)"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.71"
