[package]
name = "styledcamera"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
description = "OBS Studio video filter plugin (Rust) for background blur + styling"

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
obs-sys = { path = "../obs-sys" }
styledcamera-core = { path = "../styledcamera-core" }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }
